--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h6>SUMAN</h6>
-    <H1>SUMAN</H1>
-    <UL>
-        CHAT
-        
-    </UL>
-</body>
-</html>
+<router-outlet></router-outlet>
